--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>你是哪種動物？</title>
-    <script src="test.js"></script>
 </head>
 
 <body>
     <h1>你是哪種動物？</h1>
-    <div id="nameInput"><input type="text" id="nameInput" size="30" placeholder="在這裡輸入姓名"><input type="button" id="confirmButton" value="測看看"></div>
+    <div id="nameInput">
+       <input type="text" id="nameInput" size="30" placeholder="在這裡輸入姓名">
+       <button id="confirmButton">測看看</button>
+    </div>
     <div id="animal"></div>
+    
+    <script src="test.js"></script>
 </body>
 
 </html>
