--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
 
     <form class="form-inline">
             <div class="form-group mb-2">
-              <label class="sr-only">Email</label>
-              <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="你是什麼動物？">
+              <input type="text" class="form-control-plaintext" value="你是什麼動物？">
             </div>
-            <div class="form-group mx-sm-3 mb-2">
-              <label for="inputPassword2" class="sr-only">Password</label>
-              <input type="password" class="form-control" id="inputPassword2" placeholder="請輸入你的名字">
+            <div class="form-group mb-2">
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
             </div>
             <button type="submit" class="btn btn-primary mb-2">測測看</button>
           </form>
