--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-TW" style="height: 100%;">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link type="text/css" rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
-    <title>你是哪種動物？</title>
+  <title>你是哪種動物？</title>
 </head>
 
-<body>
+<body style="height: 100%;">
     <!--
     <h1>你是哪種動物？</h1>
     <div id="nameInput">
@@ -21,15 +22,22 @@
     <div id="animal"></div>
     -->
 
-    <form class="form-inline">
-            <div class="form-group mb-2">
-              <input type="text" class="form-control-plaintext" value="你是什麼動物？">
-            </div>
-            <div class="form-group mb-2">
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary mb-2">測測看</button>
-          </form>
+    <form style="height: 100%;">
+      <div class="vertical-container" id="a">
+      <div class="row">
+        <div class="col-sm">
+        </div>
+        <div class="col-sm" id="nameInput">
+            <label for="input">你是什麼動物？</label>
+            <input type="text" id="nameInput" placeholder="請輸入你的名字">
+            <button type="submit" id="confirmButton" class="btn btn-primary mb-2">測測看</button>
+            <div id="animal"></div>
+        </div>
+        <div class="col-sm">
+        </div>
+      </div>
+      </div>
+    </form>
 
     <script src="test.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
